# LSH_Song_Download_Tool

./: .gitignore  CMakeLists.txt  README.md  configuredialog.cpp  configuredialog.h  configuredialog.ui  widget.cpp  widget.h  widget.ui
.github/workflows/: cmake-multi-platform.yml
